Cleanup monument parsing & color shared
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>