@@ -5,18 +5,17 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import java.util.logging.Logger;
 import org.jdom2.Document;
 import org.jdom2.Element;
 import tc.oc.pgm.api.map.Gamemode;
 import tc.oc.pgm.api.map.MapModule;
-import tc.oc.pgm.api.map.MapProtos;
 import tc.oc.pgm.api.map.MapTag;
 import tc.oc.pgm.api.map.factory.MapFactory;
 import tc.oc.pgm.api.map.factory.MapModuleFactory;
 import tc.oc.pgm.api.match.Match;
 import tc.oc.pgm.api.match.MatchModule;
-import tc.oc.pgm.api.region.Region;
 import tc.oc.pgm.blockdrops.BlockDropsModule;
 import tc.oc.pgm.destroyable.DestroyableFactory.SparksType;
 import tc.oc.pgm.goals.GoalMatchModule;
@@ -24,10 +23,7 @@ import tc.oc.pgm.goals.ProximityMetric;
 import tc.oc.pgm.goals.ShowOptions;
 import tc.oc.pgm.modes.Mode;
 import tc.oc.pgm.modes.ObjectiveModesModule;
-import tc.oc.pgm.regions.BlockBoundedValidation;
 import tc.oc.pgm.regions.RegionModule;
-import tc.oc.pgm.regions.RegionParser;
-import tc.oc.pgm.teams.TeamFactory;
 import tc.oc.pgm.teams.TeamModule;
 import tc.oc.pgm.teams.Teams;
 import tc.oc.pgm.util.material.MaterialMatcher;
@@ -83,59 +79,40 @@ public class DestroyableModule implements MapModule<DestroyableMatchModule> {
     public DestroyableModule parse(MapFactory context, Logger logger, Document doc)
         throws InvalidXMLException {
       List<DestroyableFactory> destroyables = Lists.newArrayList();
-      RegionParser regionParser = context.getRegions();
+      var parser = context.getParser();
 
-      for (Element destroyableEl : XMLUtils.flattenElements(
-          doc.getRootElement(), ImmutableSet.of("destroyables"), ImmutableSet.of("destroyable"))) {
-        TeamFactory owner =
-            Teams.getTeam(new Node(XMLUtils.getRequiredAttribute(destroyableEl, "owner")), context);
-        String name = XMLUtils.getRequiredAttribute(destroyableEl, "name").getValue();
+      for (Element el : XMLUtils.flattenElements(
+          doc.getRootElement(), Set.of("destroyables"), Set.of("destroyable"))) {
+        var owner = parser.node(n -> Teams.getTeam(n, context), el, "owner").required();
+        String name = parser.string(el, "name").required();
 
-        double destructionRequired = 1.0;
-        String destructionRequiredText = destroyableEl.getAttributeValue("completion");
-        if (destructionRequiredText != null) {
-          destructionRequired =
-              Double.parseDouble(destructionRequiredText.replace("%", "").trim()) / 100.0d;
-        }
+        double completion = parser.node(this::parsePercent, el, "completion").optional(1.0);
 
-        Region region;
-        if (context.getProto().isOlderThan(MapProtos.MODULE_SUBELEMENT_VERSION)) {
-          region = regionParser.parseChildren(destroyableEl);
-          regionParser.validate(region, BlockBoundedValidation.INSTANCE, new Node(destroyableEl));
-        } else {
-          region = regionParser.parseRequiredProperty(
-              destroyableEl, "region", BlockBoundedValidation.INSTANCE);
-        }
+        var region = parser.region(el, "region").legacy(context).blockBounded().required();
 
-        String id = destroyableEl.getAttributeValue("id");
+        String id = parser.string(el, "id").orNull();
         MaterialMatcher materials = MaterialMatcher.builder()
             .blocksOnly()
             .multiPattern()
-            .parse(Node.fromRequiredAttr(destroyableEl, "materials", "material"))
+            .parse(Node.fromRequiredAttr(el, "materials", "material"))
             .build();
 
-        ImmutableSet<Mode> modeSet;
-        Node modes = Node.fromAttr(destroyableEl, "modes");
-        if (modes != null) {
-          if (destroyableEl.getAttribute("mode-changes") != null) {
-            throw new InvalidXMLException("Cannot combine modes and mode-changes", destroyableEl);
-          }
-          modeSet = parseModeSet(context, modes); // Specific set of modes
-        } else if (XMLUtils.parseBoolean(destroyableEl.getAttribute("mode-changes"), false)) {
-          modeSet = null; // All modes
-        } else {
-          modeSet = ImmutableSet.of(); // No modes
+        var modeSet = parser.node(n -> parseModeSet(context, n), el, "modes").orNull();
+        var modeChanges = parser.parseBool(el, "mode-changes").orNull();
+        if (modeChanges != null) {
+          if (modeSet != null)
+            throw new InvalidXMLException("Cannot combine modes and mode-changes", el);
+          modeSet = modeChanges ? null : ImmutableSet.of();
         }
 
-        boolean showProgress =
-            XMLUtils.parseBoolean(destroyableEl.getAttribute("show-progress"), false);
-        SparksType sparks = XMLUtils.parseEnum(
-            Node.fromAttr(destroyableEl, "sparks"), SparksType.class, SparksType.NONE);
-        boolean repairable = XMLUtils.parseBoolean(destroyableEl.getAttribute("repairable"), true);
-        ShowOptions options = ShowOptions.parse(context.getFilters(), destroyableEl);
-        Boolean required = XMLUtils.parseBoolean(destroyableEl.getAttribute("required"), null);
+        boolean showProgress = parser.parseBool(el, "show-progress").orFalse();
+        SparksType sparks =
+            parser.parseEnum(SparksType.class, el, "sparks").optional(SparksType.NONE);
+        boolean repairable = parser.parseBool(el, "repairable").orTrue();
+        ShowOptions options = ShowOptions.parse(context.getFilters(), el);
+        Boolean required = parser.parseBool(el, "required").orNull();
         ProximityMetric proximityMetric = ProximityMetric.parse(
-            destroyableEl, new ProximityMetric(ProximityMetric.Type.CLOSEST_PLAYER, false));
+            el, new ProximityMetric(ProximityMetric.Type.CLOSEST_PLAYER, false));
 
         DestroyableFactory factory = new DestroyableFactory(
             id,
@@ -146,13 +123,13 @@ public class DestroyableModule implements MapModule<DestroyableMatchModule> {
             proximityMetric,
             region,
             materials,
-            destructionRequired,
+            completion,
             modeSet,
             showProgress,
             sparks,
             repairable);
 
-        context.getFeatures().addFeature(destroyableEl, factory);
+        context.getFeatures().addFeature(el, factory);
         destroyables.add(factory);
       }
 
@@ -161,6 +138,10 @@ public class DestroyableModule implements MapModule<DestroyableMatchModule> {
       } else {
         return null;
       }
+    }
+
+    public double parsePercent(Node n) throws InvalidXMLException {
+      return XMLUtils.parseNumber(n, n.getValue().replace("%", "").trim(), Double.class);
     }
 
     public ImmutableSet<Mode> parseModeSet(MapFactory factory, Node node)
